<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_material_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_layout_height"
        app:title="@string/settings"
        app:titleTextColor="@color/black"
        app:titleTextAppearance="@style/settings_screen_title"
        app:navigationIcon="@drawable/arrow_back"
        />
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_theme_switch_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/left_right_margin"
        android:paddingVertical="@dimen/settings_top_bottom_padding"
        android:text="@string/dark_theme"
        android:textSize="@dimen/settings_text_size"
        android:layout_marginTop="@dimen/top_bottom_margin"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="@dimen/left_right_margin"
        android:paddingVertical="@dimen/settings_top_bottom_padding"
        android:text="@string/share_app"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:paddingHorizontal="@dimen/left_right_margin"
        android:paddingVertical="@dimen/settings_top_bottom_padding"
        android:text="@string/write_to_support"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreement_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow"
        android:paddingHorizontal="@dimen/left_right_margin"
        android:paddingVertical="@dimen/settings_top_bottom_padding"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />
</LinearLayout>